--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.2.6",
     "@aws-sdk/client-auto-scaling": "^3.11.0",
     "@aws-sdk/client-ec2": "^3.11.0",
+    "@aws-sdk/client-ecs": "^3.13.0",
     "node-fetch": "^2.6.1",
     "yaml": "^1.10.2"
   }
